# rs-sdrtrunk-transcriber

./: .containerignore  .editorconfig  .env.example  .gitignore  .gitmodules  Cargo.toml  Containerfile.worker  README.md  check-ci.sh  clippy.toml  config.example.toml  config.toml  deny.toml  docker-compose.yml  justfile  lint.sh  monitor.toml  nextest.toml  pgadmin-servers.json  podman-compose.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.github/workflows/: rust-ci.yml
benches/: core_benchmarks.rs
crates/sdrtrunk-api/: Cargo.toml
crates/sdrtrunk-api/src/: lib.rs  main.rs  openapi.rs  routes.rs  state.rs
crates/sdrtrunk-api/src/extractors/: api_key.rs  mod.rs  pagination.rs  validated_json.rs
crates/sdrtrunk-api/src/handlers/: admin.rs  audio_utils.rs  calls.rs  health.rs  metrics.rs  mod.rs  stats.rs  transcription.rs  upload.rs  websocket.rs
crates/sdrtrunk-api/src/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  performance.rs  rate_limit.rs
crates/sdrtrunk-core/: Cargo.toml
crates/sdrtrunk-core/proptest-regressions/: utils.txt
crates/sdrtrunk-core/src/: config.rs  error.rs  lazy.rs  lib.rs  types.rs  utils.rs
crates/sdrtrunk-database/: Cargo.toml
crates/sdrtrunk-database/migrations/: 20240101000001_initial_schema.sql  20240101000002_add_transcription_error.sql
crates/sdrtrunk-database/src/: lib.rs  models.rs  queries.rs  queries.rs.original
crates/sdrtrunk-monitor/: Cargo.toml  README.md
crates/sdrtrunk-monitor/benches/: monitor_bench.rs
crates/sdrtrunk-monitor/src/: config.rs  error.rs  lib.rs  main.rs  monitor.rs  processor.rs  queue.rs  service.rs
crates/sdrtrunk-protocol/: Cargo.toml
crates/sdrtrunk-protocol/src/: config.rs  error.rs  lib.rs
crates/sdrtrunk-storage/: Cargo.toml
crates/sdrtrunk-storage/migrations/: 20240101000001_initial_schema.sql
crates/sdrtrunk-storage/src/: error.rs  jobs.rs  lib.rs  models.rs  queries.rs
crates/sdrtrunk-transcriber/: Cargo.toml
crates/sdrtrunk-transcriber/src/: error.rs  lib.rs  mock.rs  service.rs  types.rs  whisperx.rs  whisperx_impl.rs  worker.rs
crates/sdrtrunk-types/: Cargo.toml
crates/sdrtrunk-types/src/: app_error.rs  call.rs  error.rs  frequency.rs  lib.rs  radio.rs  status.rs  system.rs  talkgroup.rs
crates/sdrtrunk-types/tests/: id_tests.rs  system_tests.rs
crates/sdrtrunk-web/: Cargo.toml
crates/sdrtrunk-web/src/: api_client.rs  app.rs  lib.rs  main.rs  routes.rs  server.rs  state.rs  websocket.rs
crates/sdrtrunk-web/src/components/: audio_player.rs  call_list.rs  loading.rs  mod.rs  pagination.rs
crates/sdrtrunk-web/src/handlers/: api.rs  mod.rs  pages.rs
crates/sdrtrunk-web/src/pages/: admin.rs  calls.rs  dashboard.rs  mod.rs  not_found.rs  stats.rs
crates/sdrtrunk-web/templates/: admin.html  calls.html  dashboard.html  stats.html
crates/sdrtrunk-worker/: Cargo.toml
crates/sdrtrunk-worker/src/: main.rs  whisper.rs
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/development/: DEPENDENCY_OPTIMIZATION.md  RUST_STANDARDS.md  SECURITY_PERFORMANCE_GUIDELINES.md
docs/testing/: COVERAGE_BASELINE.md
k8s/: download-model.yaml  storage.yaml  worker.yaml
local-ci/: README.md  docker-compose.yml  run-local-ci.sh
local-ci/config/: init-test-db.sql
local-ci/containers/: Containerfile.ci  Containerfile.postgres
local-ci/scripts/: run-ci-checks.sh
python/whisperx_service/: Dockerfile  README.md  config.py  docker-compose.yml  ecosystem.config.js  models.py  requirements.txt  service.py  test_service.py  transcription.py  whisperx.service
scripts/: db.sh  run-server.sh  test_api.sh  view-db-data.sh
tests/: integration_api.rs  integration_core.rs  integration_database.rs  integration_monitor.rs
tests/common/: fixtures.rs  helpers.rs  mod.rs
