[workspace]
members = [
    "crates/sdrtrunk-core",
    "crates/sdrtrunk-database",
    "crates/sdrtrunk-api",
    "crates/sdrtrunk-monitor",
]
resolver = "2"
default-members = ["crates/sdrtrunk-api"]

[workspace.package]
version = "0.1.0"
authors = ["swiftraccoon"]
license = "GPL-3.0"
edition = "2024"
rust-version = "1.89.0"
homepage = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
documentation = "https://docs.rs/rs-sdrtrunk-transcriber"
keywords = ["sdr", "radio", "transcription", "audio", "signal-processing"]
categories = ["multimedia", "parsing", "command-line-utilities"]
readme = "README.md"
description = "SDRTrunk transcription and analysis toolkit"

[workspace.dependencies]
# Async runtime and utilities
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Serialization and data formats
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
csv = "1.3"

# Error handling and logging
tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_info"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.26"

# CLI and configuration
clap = { version = "4.5", features = ["derive", "env", "wrap_help", "string"] }
config = "0.14"
directories = "5.0"

# Performance and data structures
indexmap = { version = "2.5", features = ["serde"] }
dashmap = "6.1"
crossbeam = "0.8"
rayon = "1.10"
parking_lot = "0.12"
arc-swap = "1.7"
# once_cell replaced with std::sync::LazyLock

# Memory management and safety
bytes = "1.7"
smallvec = { version = "1.13", features = ["serde", "const_generics"] }
tinyvec = { version = "1.8", features = ["alloc", "serde"] }

# Cryptography and security
ring = "0.17"
rustls = { version = "0.23", features = ["logging", "tls12"] }
rustls-webpki = "0.102"

# Networking and HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
hyper = { version = "1.4", features = ["full"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }

# Database and storage
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid"] }

# Date and time
chrono = { version = "0.4", features = ["serde", "clock"] }
time = { version = "0.3", features = ["serde", "macros", "formatting", "parsing"] }

# Audio and signal processing
hound = "3.5"  # WAV file I/O
dasp = { version = "0.11", features = ["all"] }
rubato = "0.15"  # Audio resampling
apodize = "1.0"  # Windowing functions

# Numeric computing and DSP
ndarray = { version = "0.16", features = ["serde", "rayon", "blas"] }
num-complex = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
rustfft = "6.2"

# Regular expressions and text processing
regex = "1.10"
unicode-segmentation = "1.12"
unicode-normalization = "0.1"

# File I/O and compression
memmap2 = "0.9"
flate2 = "1.0"
zstd = "0.13"

# Development and testing dependencies
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1.5"
quickcheck = "1.0"
tempfile = "3.13"
similar-asserts = "1.6"

# System integration
nix = { version = "0.29", features = ["signal", "process", "fs"] }
libc = "0.2"

# File system monitoring
notify = { version = "6.1", features = ["macos_fsevent", "macos_kqueue"] }
notify-debouncer-full = "0.3"

# UUID and random number generation
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = { version = "0.8", features = ["std_rng"] }

# Testing utilities
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
mockall = "0.13"
rstest = "0.23"
wiremock = "0.6"
tarpaulin = "0.31"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Workspace-wide lints configuration
[workspace.lints.rust]
# Deny unsafe code by default (allow in specific modules with #[allow(unsafe_code)])
unsafe_code = "forbid"
# Deny common mistake patterns
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "warn"
unreachable_pub = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[workspace.lints.clippy]
# Deny all clippy categories for maximum safety
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# Allow some overly restrictive lints
multiple_crate_versions = "allow"
missing_docs_in_private_items = "allow"
implicit_return = "allow"
question_mark_used = "allow"
single_call_fn = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
separated_literal_suffix = "allow"
mod_module_files = "allow"
blanket_clippy_restriction_lints = "allow"
literal-string-with-formatting-args = "allow"

# Performance lints
unnecessary_wraps = "deny"
large_types_passed_by_value = "deny"
trivially_copy_pass_by_ref = "deny"

# Security and correctness lints
lossy_float_literal = "deny"
mem_forget = "deny"
panic = "deny"
unreachable = "deny"
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
integer_arithmetic = "allow"  # Too restrictive for most code
float_arithmetic = "allow"    # Too restrictive for DSP code

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
private_intra_doc_links = "deny"
missing_crate_level_docs = "warn"
invalid_codeblock_attributes = "deny"
invalid_rust_codeblocks = "deny"
bare_urls = "deny"

# Profile configurations inherited by all workspace members
[profile.dev]
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
opt-level = 0

[profile.release]
debug = false
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
opt-level = 3
strip = true

[profile.test]
debug = 2
debug-assertions = true
overflow-checks = true
opt-level = 1

[profile.bench]
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
incremental = false
codegen-units = 1
opt-level = 3

# Custom profiles
[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug-assertions = true
overflow-checks = true

[profile.release-debug]
inherits = "release"
debug = 1
strip = false