[package]
name = "sdrtrunk-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "REST API server for SDRTrunk transcriber"
publish = false
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "api", "rest", "axum", "transcription"]
categories = ["web-programming", "multimedia"]

[[bin]]
name = "sdrtrunk-api-server"
path = "src/main.rs"

[dependencies]
# Internal dependencies
sdrtrunk-protocol = { path = "../sdrtrunk-protocol" }
sdrtrunk-types = { path = "../sdrtrunk-types" }
sdrtrunk-storage = { path = "../sdrtrunk-storage" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true }

# OpenAPI documentation (commented out to reduce dependencies)
# utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
# utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

# Metrics (simplified - could use a lighter solution)
# prometheus = "0.13"

# Date/time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
sha2 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Configuration loading
config = { workspace = true }

# Rate limiting
governor = { workspace = true }

# URL encoding removed - using manual parsing

# HTTP status codes and utilities
http = { workspace = true }

# Dashboard/map for in-memory storage
dashmap = { workspace = true }

# Async utilities for WebSocket
futures-util = { workspace = true }

# Direct access to sqlx types
sqlx = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
# HTTP client for testing
reqwest = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }

# Test utilities
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
validator = { workspace = true }
tokio-test = "0.4"

[lints]
workspace = true