[package]
name = "sdrtrunk-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and utilities for SDRTrunk transcriber"
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "radio", "transcription", "audio", "core"]
categories = ["multimedia", "parsing"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling (custom implementations)

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
config = "0.14"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
num_cpus = "1.16"

# Validation
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.40", features = ["rt", "macros"] }
pretty_assertions = "1.4"
tempfile = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
path = "../../benches/core_benchmarks.rs"