[package]
name = "sdrtrunk-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core types and utilities for SDRTrunk transcriber"
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "radio", "transcription", "audio", "core"]
categories = ["multimedia", "parsing"]

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling (custom implementations)

# Date/time
chrono = { workspace = true }

# Logging
tracing-subscriber = { workspace = true }

# Configuration
config = { workspace = true }

# Utilities
uuid = { workspace = true }

# Validation
validator = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
path = "../../benches/core_benchmarks.rs"