[package]
name = "sdrtrunk-database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database models and migrations for SDRTrunk transcriber"

[dependencies]
# Internal dependencies
sdrtrunk-core = { path = "../sdrtrunk-core" }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json", "ipnetwork", "rust_decimal"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }

# Logging
tracing = "0.1"

# Error handling (uses sdrtrunk-core custom implementations)

[dev-dependencies]
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
pretty_assertions = "1.4"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }