[package]
name = "sdrtrunk-database"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database models and migrations for SDRTrunk transcriber"
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "database", "postgresql", "sqlx", "transcription"]
categories = ["database", "multimedia"]

[dependencies]
# Internal dependencies
sdrtrunk-core = { path = "../sdrtrunk-core" }

# Database  
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "json", "ipnetwork", "rust_decimal", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
rust_decimal = { version = "1.36", features = ["serde", "db-postgres"] }

# Error handling (uses sdrtrunk-core custom implementations)

[dev-dependencies]
# Async runtime for tests
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }

# Test utilities
pretty_assertions = "1.4"
tempfile = "3.13"
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }

# Property-based testing
proptest = "1.5"
tokio-test = "0.4"

# Additional test utilities
futures = "0.3"