[package]
name = "sdrtrunk-monitor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "File monitoring service for SDRTrunk transcriber"
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "monitor", "file-watcher", "transcription", "audio"]
categories = ["filesystem", "multimedia"]

[dependencies]
# Internal dependencies
sdrtrunk-core = { path = "../sdrtrunk-core" }
sdrtrunk-database = { path = "../sdrtrunk-database" }

# Async runtime
tokio = { workspace = true }

# File system monitoring
notify = { workspace = true }
notify-debouncer-full = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

# Error handling and logging
# Error handling uses custom implementations from sdrtrunk-core
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sqlx = { workspace = true }

# Date/time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Configuration
config = { workspace = true }

# CLI (for standalone binary)
clap = { workspace = true }

# Async utilities - removed num_cpus and async-recursion

[dev-dependencies]
# Async runtime for tests
tokio = { workspace = true, features = ["test-util"] }

# Test utilities
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
tokio-test = "0.4"

# Benchmarking
criterion = { workspace = true }

[[bin]]
name = "sdrtrunk-monitor"
path = "src/main.rs"

[lib]
name = "sdrtrunk_monitor"
path = "src/lib.rs"

[[bench]]
name = "monitor_bench"
harness = false