[package]
name = "sdrtrunk-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Database models and migrations for SDRTrunk transcriber"
publish = false
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["sdr", "database", "postgresql", "sqlx", "transcription"]
categories = ["database", "multimedia"]

[dependencies]
# Internal dependencies
sdrtrunk-types = { path = "../sdrtrunk-types", features = ["sqlx"] }
sdrtrunk-protocol = { path = "../sdrtrunk-protocol" }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/time
chrono = { workspace = true }

# Utilities
uuid = { workspace = true }
rust_decimal = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

[dev-dependencies]
# Async runtime for tests
tokio = { workspace = true }

# Test utilities
tempfile = { workspace = true }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }

# Property-based testing
proptest = { workspace = true }
tokio-test = "0.4"

[lints]
workspace = true

