[package]
name = "sdrtrunk-transcriber"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Transcription service for SDRTrunk audio files with speaker diarization"
publish = false
license.workspace = true
repository = "https://github.com/swiftraccoon/rs-sdrtrunk-transcriber"
readme = "../../README.md"
keywords = ["transcription", "whisper", "diarization", "sdr", "audio"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
# Workspace dependencies
sdrtrunk-types = { path = "../sdrtrunk-types" }
sdrtrunk-protocol = { path = "../sdrtrunk-protocol" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# HTTP client for Python service communication
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID for request tracking
uuid = { workspace = true }

# Time handling
chrono = { workspace = true }


[dev-dependencies]
# Testing
tokio-test = "0.4"
proptest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true

[features]
default = []
mock = []  # Enable mock transcription service